@@ -12,34 +12,25 @@
 #import "HCDescription.h"
 
 
-namespace {
-
-NSString* comparison(NSComparisonResult compare)
-{
-    if (compare == NSOrderedDescending)
-        return @"less than";
-    else if (compare == NSOrderedSame)
-        return @"equal to";
-    else
-        return @"greater than";
-}
-
-}   // namespace
-
-
 @implementation HCOrderingComparison
 
 + (id) compare:(id)expectedValue
     minCompare:(NSComparisonResult)min
     maxCompare:(NSComparisonResult)max
+    comparisonDescription:(NSString*)description
 {
-    return [[[self alloc] initComparing:expectedValue minCompare:min maxCompare:max] autorelease];
+    return [[[self alloc] initComparing:expectedValue
+                             minCompare:min
+                             maxCompare:max
+                  comparisonDescription:description]
+            autorelease];
 }
 
 
 - (id) initComparing:(id)expectedValue
           minCompare:(NSComparisonResult)min
           maxCompare:(NSComparisonResult)max
+          comparisonDescription:(NSString*)description
 {
     if (![expectedValue respondsToSelector:@selector(compare:)])
     {
@@ -54,6 +45,7 @@ NSString* comparison(NSComparisonResult compare)
         expected = [expectedValue retain];
         minCompare = min;
         maxCompare = max;
+        comparisonDescription = [description copy];
     }
     return self;
 }
@@ -62,6 +54,7 @@ NSString* comparison(NSComparisonResult compare)
 - (void) dealloc
 {
     [expected release];
+    [comparisonDescription release];
     
     [super dealloc];
 }
@@ -79,10 +72,10 @@ NSString* comparison(NSComparisonResult compare)
 
 - (void) describeTo:(id<HCDescription>)description
 {
-    [[description appendText:@"a value "] appendText:comparison(minCompare)];
-    if (minCompare != maxCompare)
-        [[description appendText:@" or "] appendText:comparison(maxCompare)];
-    [[description appendText:@" "] appendDescriptionOf:expected];
+    [[[[description appendText:@"a value "]
+                    appendText:comparisonDescription]
+                    appendText:@" "]
+                    appendDescriptionOf:expected];
 }
 
 @end
@@ -92,26 +85,30 @@ OBJC_EXPORT id<HCMatcher> HC_greaterThan(id aValue)
 {
     return [HCOrderingComparison compare:aValue
                               minCompare:NSOrderedAscending
-                              maxCompare:NSOrderedAscending];
+                              maxCompare:NSOrderedAscending
+                   comparisonDescription:@"greater than"];
 }
 
 OBJC_EXPORT id<HCMatcher> HC_greaterThanOrEqualTo(id aValue)
 {
     return [HCOrderingComparison compare:aValue
                               minCompare:NSOrderedAscending
-                              maxCompare:NSOrderedSame];
+                              maxCompare:NSOrderedSame
+                   comparisonDescription:@"greater than or equal to"];
 }
 
 OBJC_EXPORT id<HCMatcher> HC_lessThan(id aValue)
 {
     return [HCOrderingComparison compare:aValue
                               minCompare:NSOrderedDescending
-                              maxCompare:NSOrderedDescending];
+                              maxCompare:NSOrderedDescending
+                   comparisonDescription:@"less than"];
 }
 
 OBJC_EXPORT id<HCMatcher> HC_lessThanOrEqualTo(id aValue)
 {
     return [HCOrderingComparison compare:aValue
                               minCompare:NSOrderedSame
-                              maxCompare:NSOrderedDescending];
+                              maxCompare:NSOrderedDescending
+                   comparisonDescription:@"less than or equal to"];
 }
