@@ -21,6 +21,8 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Improved "closeTo" mismatch description.
 
+* Improved "lessThanOrEqualTo" description.
+
 
 == Version 1.2 ==
 
